--- a/package.json
+++ b/package.json
@@ -3,32 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@editorjs/attaches": "^1.2.1",
-    "@editorjs/checklist": "^1.3.0",
-    "@editorjs/delimiter": "^1.2.0",
-    "@editorjs/editorjs": "^2.24.3",
-    "@editorjs/embed": "^2.5.1",
-    "@editorjs/header": "^2.6.2",
-    "@editorjs/image": "^2.6.2",
-    "@editorjs/link": "^2.4.1",
-    "@editorjs/list": "^1.7.0",
-    "@editorjs/marker": "^1.2.2",
-    "@editorjs/nested-list": "^1.0.2",
-    "@editorjs/quote": "^2.4.0",
-    "@editorjs/simple-image": "^1.4.1",
-    "@editorjs/table": "^2.0.2",
-    "@editorjs/underline": "^1.0.0",
-    "@editorjs/warning": "^1.2.0",
+    "@react-page/plugins-slate": "^5.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "draft-js": "^0.11.7",
+    "jodit-react": "^1.3.11",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
-    "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
